New /skip_turn endpoint
